--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@typegoose/typegoose": "^12.2.0",
     "@types/body-parser": "^1.19.5",
     "body-parser": "^1.20.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "vercel": "^33.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
